2010-02-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pal/gtk/debug-ui.cpp: Expand even more on the media debug dialog.

	* playlist.h: Playlist: Added a getter to fetch the list of entries.

	* pipeline-asf.cpp|h: ASFFrameReader: keep a count of the number of
	payloads we have. ASFDemuxer: add a method to get the number of
	payloads a stream has cached.

2010-02-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dependencyproperty.cpp: Fix compiler warning.

2010-02-25  Alan McGovern  <amcgovern@novell.com>

	* frameworkelement.h: FrameworkElement.DataContext is now
	  treated as if it were a Custom DP. It doesn't parent its
	  content and doesn't register its contents name if the
	  content is a DO.

2010-02-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-asf.cpp:
	* playlist.cpp|h: Move the 'is waiting for entry' check to
	MmsPlaylistEntry, this way we don't end up doing too much during
	constructors.

2010-02-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* playlist.cpp: PlaylistEntry: Don't emit OpeningEvent if we're not the
	current element - the media element is still playing the previous
	entry.

2010-02-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-asf.cpp|h:
	* mms-downloader.cpp|h: Tell the max bitrate to the MmsSource,
	and select the streams we want as soon as we've parsed the
	header.

2010-02-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-asf.cpp: MmsSource: Keep a flag telling if we're a sspl
	or not - and only set IsDynamic on the root playlist if we are a 
	sspl.

	* mediaplayer.cpp: Don't seek with server-side playlists.

	* playlist.h: Added IsDynamic getter.

2010-02-25  Alan McGovern  <amcgovern@novell.com>

	* dependencyobject.cpp: To be bug compatible with MS we need
	  to allow the registering of names of DOs in custom
	  DependencyProperties but disallow unregistering them later.
	  Fixes infinite loop in several sites such as
	  http://demos.devexpress.com/AgDataGridDemos
