@@ -1,3 +1,10 @@
+2010-02-25  Alan McGovern  <amcgovern@novell.com>
+
+	* bitmapimage.cpp: Unregress drt 97 - Now that PixbufWrite
+	  doesn't emit the failed event dirctly we need to handle it
+	  here for the case where managed code provides a Stream as
+	  the source.
+
 2010-02-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* pal/gtk/debug-ui.cpp: Expand even more on the media debug dialog.
